Make sure long values are wrapped.

--- a/coin-selfservice-standalone/src/stylesheets/modules/history.sass
+++ b/coin-selfservice-standalone/src/stylesheets/modules/history.sass
@@ -8,3 +8,6 @@
   table
     @extend %box
     margin-top: 10px
+    td
+      word-break: break-all
+
